:bug: Fix extra spacing before % symbol
Fix excessive amount of space before % symbol due to new font

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -6,6 +6,7 @@
   font-size: 26px;
   color: #4f4f4f;
   margin-top: 10px;
+  margin-bottom: -5px;
 }
 .itemPercentage {
   font-style: normal;
